# codex-account-switch-backups

./: .coverage  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codex-backend.spec  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  gh-pages.yml  release.yml
USER_GUIDE/: index.html
apps/web/: components.json  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: AccountSwitcher.tsx  UsageCard.tsx  VersionFooter.tsx
apps/web/lib/: types.ts
apps/web/src-tauri/: Cargo.toml  build_log.txt  tauri.conf.json
build_scripts/: build_backend.sh
design/image_prompts/: index.html
docs/: USER_GUIDE.md  index.md
docs/design/: image_prompts.md
search/: search_index.json
src/codex_account_manager/: main.py
src/codex_account_manager/commands/: account.py  audit.py  auth.py  context.py  env.py  hook.py  limits.py  local_context.py  migrate.py  run.py  (+4 more)
tests/: conftest.py  test_audit.py  test_audit_cli.py  test_auth.py  test_commands.py  test_config.py  test_context.py  test_context_awareness.py  test_core.py  test_crypto.py  test_device_flow_email.py  test_encryption_integration.py  test_env.py  test_hook.py  test_ingest.py  test_limits.py  test_main.py  test_migrate.py  test_migration_cmd.py  test_oauth.py  test_portability.py  test_run.py  test_session_shelving.py  test_sync.py  test_tags.py  test_team.py  test_tui.py  test_utils.py  test_vaults.py
(+14 files in other folders)
