[project]
name = "codex-account-manager"
version = "3.0.0"
description = "A secure CLI tool for managing multi-context Codex credentials with safe switching and legacy migration."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/my-org/codex-account-manager"
repository = "https://github.com/my-org/codex-account-manager"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Utilities",
]
keywords = ["cli", "security", "credentials", "vault", "encryption"]
authors = [
    {name = "salacoste",email = "bad.vano23ru@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "typer[all] (>=0.21.1,<0.22.0)",
    "rich (>=14.2.0,<15.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "shellingham (>=1.5.4,<2.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "keyring (>=25.7.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[project.scripts]
codex-account = "codex_account_manager.main:main"

[tool.poetry]
packages = [{include = "codex_account_manager", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
